// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BinanceAPI accountInfo getAssets refreshed accountInfo 1`] = `
Array [
  Object {
    "asset": "BTC",
    "free": 0.10054433,
    "locked": 0,
  },
  Object {
    "asset": "LTC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ETH",
    "free": 0.00087248,
    "locked": 0,
  },
  Object {
    "asset": "NEO",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BNB",
    "free": 0.00858866,
    "locked": 0,
  },
  Object {
    "asset": "QTUM",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "EOS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "SNT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BNT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "GAS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BCC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "USDT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "HSR",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "OAX",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "DNT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "MCO",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ICN",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ZRX",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "OMG",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "WTC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "YOYO",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "LRC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "TRX",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "SNGLS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "STRAT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BQX",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "FUN",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "KNC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "CDT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "XVG",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "IOTA",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "SNM",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "LINK",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "CVC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "TNT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "REP",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "MDA",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "MTL",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "SALT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "NULS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "SUB",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "MTH",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ADX",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ETC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ENG",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ZEC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "AST",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "GNT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "DGD",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BAT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "DASH",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "POWR",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BTG",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "REQ",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "XMR",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "EVX",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "VIB",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ENJ",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "VEN",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ARK",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "XRP",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "MOD",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "STORJ",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "KMD",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "RCN",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "EDO",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "DATA",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "DLT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "MANA",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "PPT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "RDN",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "GXS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "AMB",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ARN",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BCPT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "CND",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "GVT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "POE",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BTS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "FUEL",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "XZC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "QSP",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "LSK",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BCD",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "TNB",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ADA",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "LEND",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "XLM",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "CMT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "WAVES",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "WABI",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "GTO",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ICX",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "OST",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ELF",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "AION",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "WINGS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BRD",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "NEBL",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "NAV",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "VIBE",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "LUN",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "TRIG",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "APPC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "CHAT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "RLC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "INS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "PIVX",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "IOST",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "STEEM",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "NANO",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "AE",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "VIA",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BLZ",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "SYS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "RPX",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "NCASH",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "POA",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ONT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ZIL",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "STORM",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "XEM",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "WAN",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "WPR",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "QLC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "GRS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "CLOAK",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "LOOM",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BCN",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "TUSD",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ZEN",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "SKY",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "THETA",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "IOTX",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "QKC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "AGI",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "NXS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "SC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "NPXS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "KEY",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "NAS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "MFT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "DENT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ARDR",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "HOT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "VET",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "DOCK",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "POLY",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ONG",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "PHX",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "HC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "GO",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "PAX",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "RVN",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "DCR",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "USDC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "MITH",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BCHABC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BCHSV",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "REN",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BTT",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "USDS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "FET",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "TFUEL",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "CELR",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "MATIC",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ATOM",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "PHB",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ONE",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "FTM",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BTCB",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "USDSB",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "CHZ",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "COS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ALGO",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ERD",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "DOGE",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BGBP",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "DUSK",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "ANKR",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "WIN",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "TUSDB",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "COCOS",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "PERL",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "TOMO",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BUSD",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BAND",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "BEAM",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "HBAR",
    "free": 0,
    "locked": 0,
  },
  Object {
    "asset": "XTZ",
    "free": 0,
    "locked": 0,
  },
]
`;

exports[`BinanceAPI accountInfo succeeds 1`] = `
Object {
  "accountType": "MARGIN",
  "balances": Array [
    Object {
      "asset": "BTC",
      "free": "0.10054433",
      "locked": "0.00000000",
    },
    Object {
      "asset": "LTC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ETH",
      "free": "0.00087248",
      "locked": "0.00000000",
    },
    Object {
      "asset": "NEO",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BNB",
      "free": "0.00858866",
      "locked": "0.00000000",
    },
    Object {
      "asset": "QTUM",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "EOS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "SNT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BNT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "GAS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BCC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "USDT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "HSR",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "OAX",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "DNT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "MCO",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ICN",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ZRX",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "OMG",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "WTC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "YOYO",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "LRC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "TRX",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "SNGLS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "STRAT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BQX",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "FUN",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "KNC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "CDT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "XVG",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "IOTA",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "SNM",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "LINK",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "CVC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "TNT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "REP",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "MDA",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "MTL",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "SALT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "NULS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "SUB",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "MTH",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ADX",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ETC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ENG",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ZEC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "AST",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "GNT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "DGD",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BAT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "DASH",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "POWR",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BTG",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "REQ",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "XMR",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "EVX",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "VIB",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ENJ",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "VEN",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ARK",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "XRP",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "MOD",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "STORJ",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "KMD",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "RCN",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "EDO",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "DATA",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "DLT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "MANA",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "PPT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "RDN",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "GXS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "AMB",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ARN",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BCPT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "CND",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "GVT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "POE",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BTS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "FUEL",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "XZC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "QSP",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "LSK",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BCD",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "TNB",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ADA",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "LEND",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "XLM",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "CMT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "WAVES",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "WABI",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "GTO",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ICX",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "OST",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ELF",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "AION",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "WINGS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BRD",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "NEBL",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "NAV",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "VIBE",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "LUN",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "TRIG",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "APPC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "CHAT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "RLC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "INS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "PIVX",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "IOST",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "STEEM",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "NANO",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "AE",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "VIA",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BLZ",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "SYS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "RPX",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "NCASH",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "POA",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ONT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ZIL",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "STORM",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "XEM",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "WAN",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "WPR",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "QLC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "GRS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "CLOAK",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "LOOM",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BCN",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "TUSD",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ZEN",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "SKY",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "THETA",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "IOTX",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "QKC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "AGI",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "NXS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "SC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "NPXS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "KEY",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "NAS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "MFT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "DENT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ARDR",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "HOT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "VET",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "DOCK",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "POLY",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ONG",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "PHX",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "HC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "GO",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "PAX",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "RVN",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "DCR",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "USDC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "MITH",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BCHABC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BCHSV",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "REN",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BTT",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "USDS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "FET",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "TFUEL",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "CELR",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "MATIC",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ATOM",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "PHB",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ONE",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "FTM",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BTCB",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "USDSB",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "CHZ",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "COS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ALGO",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ERD",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "DOGE",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BGBP",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "DUSK",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "ANKR",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "WIN",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "TUSDB",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "COCOS",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "PERL",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "TOMO",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BUSD",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BAND",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "BEAM",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "HBAR",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
    Object {
      "asset": "XTZ",
      "free": "0.00000000",
      "locked": "0.00000000",
    },
  ],
  "buyerCommission": 0,
  "canDeposit": true,
  "canTrade": true,
  "canWithdraw": true,
  "makerCommission": 10,
  "sellerCommission": 0,
  "takerCommission": 10,
  "updateTime": 1569788317465,
}
`;

exports[`BinanceAPI ping rejects with non 200 status code 1`] = `[AssertionError: undefined == 200]`;

exports[`BinanceAPI verifyQuantity exchangeInfo fetched it fails with LOT_SIZE 1`] = `[Error: LOT_SIZE filter failure]`;

exports[`BinanceAPI verifyQuantity exchangeInfo fetched it fails with LOT_SIZE 2`] = `[Error: LOT_SIZE filter failure]`;

exports[`BinanceAPI verifyQuantity exchangeInfo fetched it fails with MIN_NOTIONAL 1`] = `[Error: MIN_NOTIONAL filter failure]`;

exports[`BinanceAPI verifyQuantity it fails without exchangeInfo 1`] = `[Error: exchangeInfo has not been fetched]`;
